@@ -40,3 +40,4 @@
 - Pack ECS metadata to request payload send to fleet {pull}17894[17894]
 - Allow CLI overrides of paths {pull}17781[17781]
 - Enable Filebeat input: S3, Azureeventhub, cloudfoundry, httpjson, netflow, o365audit. {pull}17909[17909]
+- Enable debug log level for Metricbeat and Filebeat when run under the Elastic Agent. {pull}17935[17935]
